--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,7 @@
     "Category": "Krabs",
     "CategoryIcon": "resources/images/categoryIcon",
     "CodePath": "windowsshutdownmenu.html",
+    "PropertyInspectorPath": "windowsshutdownmenu_pi.html",
     "Description": "Displays the Windows Shutdown Menu Profile with options to shutdown, reboot, lock, or cancel shutdown.",
     "Name": "Windows Shutdown Menu",
     "Icon": "resources/images/pluginIcon",
