--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
     ],
     "SDKVersion": 2,
     "Author": "Krabs",
-    "Category": "Krabs",
+    "Category": "Krabs - Streamdeck Labs",
     "CategoryIcon": "resources/images/categoryIcon",
     "CodePath": "windowsshutdownmenu.html",
     "PropertyInspectorPath": "windowsshutdownmenu_pi.html",
@@ -39,7 +39,7 @@
     "Name": "Windows Shutdown Menu",
     "Icon": "resources/images/pluginIcon",
     "URL": "https://www.krabs.me/streamdeck-plugins",
-    "Version": "1.0.4",
+    "Version": "1.0.6",
     "OS": [
         { "Platform": "windows", "MinimumVersion": "10" }
     ],
