--- a/manifest.json
+++ b/manifest.json
@@ -41,11 +41,11 @@
     "CategoryIcon": "resources/images/categoryIcon",
     "CodePath": "windowsshutdownmenu.html",
     "PropertyInspectorPath": "windowsshutdownmenu_pi.html",
-    "Description": "Displays the Windows Shutdown Menu Profile with options to shutdown, reboot, lock, or cancel shutdown.",
+    "Description": "Displays the Windows Shutdown Menu Profile with options to shutdown, reboot, lock, Sleep, Sign Out, or cancel shutdown. Compatible with Stream Deck, Stream Deck MkII, Stream Deck XL, & Stream Deck Mini. *(Stream Deck Mini only supports shutdown, reboot, lock, or cancel shutdown).",
     "Name": "Windows Shutdown Menu",
     "Icon": "resources/images/pluginIcon",
     "URL": "https://www.krabs.me/streamdeck-plugins",
-    "Version": "1.0.13",
+    "Version": "1.0.14",
     "OS": [
         { "Platform": "windows", "MinimumVersion": "10" }
     ],
